tests/ui/solver-attribute/multiple-args/expected
error: the `#[kani::solver]` attribute expects a single argument. Got 2 arguments.\
test.rs:\
|\
| #[kani::solver(kissat, minisat)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: aborting due to 1 previous error
